--- a/HelloWorld.ipynb
+++ b/HelloWorld.ipynb
@@ -259,7 +259,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "6d736215",
+   "id": "512de255",
    "metadata": {},
    "outputs": [
     {
@@ -410,8 +410,75 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "id": "ae876360",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0        False\n",
+       "1        False\n",
+       "2        False\n",
+       "3        False\n",
+       "4        False\n",
+       "         ...  \n",
+       "16593    False\n",
+       "16594    False\n",
+       "16595    False\n",
+       "16596    False\n",
+       "16597    False\n",
+       "Length: 16598, dtype: bool"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.duplicated()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "c3b30ee6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 16598 entries, 0 to 16597\n",
+      "Data columns (total 11 columns):\n",
+      " #   Column        Non-Null Count  Dtype  \n",
+      "---  ------        --------------  -----  \n",
+      " 0   Rank          16598 non-null  int64  \n",
+      " 1   Name          16598 non-null  object \n",
+      " 2   Platform      16598 non-null  object \n",
+      " 3   Year          16327 non-null  float64\n",
+      " 4   Genre         16598 non-null  object \n",
+      " 5   Publisher     16540 non-null  object \n",
+      " 6   NA_Sales      16598 non-null  float64\n",
+      " 7   EU_Sales      16598 non-null  float64\n",
+      " 8   JP_Sales      16598 non-null  float64\n",
+      " 9   Other_Sales   16598 non-null  float64\n",
+      " 10  Global_Sales  16598 non-null  float64\n",
+      "dtypes: float64(6), int64(1), object(4)\n",
+      "memory usage: 1.4+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "data.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "13b14968",
+   "id": "b2a4081c",
    "metadata": {},
    "outputs": [],
    "source": []
